# talk2folder

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bbbf8a2da11c_initial.py  c8f2e3a4b5d6_add_index_mode_gemini_files.py
backend/app/: config.py  main.py
backend/app/agent/: hybrid_agent.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  drive.py
backend/app/db/: database.py  models.py
backend/app/services/: gemini_service.py  google_drive.py  ingestion.py  vector_store.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx
frontend/src/components/Auth/: AuthCallback.tsx  LoginPage.tsx
frontend/src/components/Chat/: Chat.tsx
frontend/src/components/FilePreviewPanel/: FilePreviewPanel.tsx  index.ts
frontend/src/components/PdfViewer/: PdfViewer.tsx
frontend/src/services/: api.ts
